# 2025-Modern-Software-Engineering

./: CMakeLists.txt  LICENSE  README.md  calculator.py  calculatorGUI.py  frontEnd.html  package-lock.json  package.json  setup.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/sercives/: calculator.py
calculateUI/calculatelogic/: CalculatorLOGIC1.py
frontend/: readme.txt
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: BasicCalculator.tsx  MatrixCalculator.tsx
frontend/src/components/common/: Layout.tsx
frontend/src/types/: index.ts
frontend/src/untils/: helpers.ts
public/: index.html
src/: binding.cpp  calculator.cpp  calculator.h  explanation.txt  index.tsx
src/components/: RegressionAnalysis.tsx  StatisticalCalculator.tsx
src/services/: api.ts
test/: readme.txt  test_calculator.py
